--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import 'cropperjs/dist/cropper.css';
 @import "@tomtom-international/web-sdk-maps/dist/maps.css";
 .Vue-Toastification__container.toast-dialog-container {
   width: 300px;
@@ -10,3 +11,46 @@
     min-width: 300px;
   }
 }
+
+.image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.center-image {
+  display: block;
+  margin: 0 auto;
+}
+
+.title-container {
+  text-align: center;
+}
+
+.custom-btn {
+  background-color: #2196F3;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.custom-btn:hover {
+  background-color: #0D47A1;
+}
+
+.delete-btn {
+  background-color: #f32121;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.delete-btn:hover {
+  background-color: #a10d0d;
+}
+
+
