edit login page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,4 +53,9 @@
   background-color: #a10d0d;
 }
 
+.app-color {
+  background-image: linear-gradient(to right, #88a0e0, #0f55bd);
+  color: white;
+}
+
 
