--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,12 @@
 @import 'cropperjs/dist/cropper.css';
 @import "@tomtom-international/web-sdk-maps/dist/maps.css";
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');
+
+* {
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+}
+
 .Vue-Toastification__container.toast-dialog-container {
   width: 300px;
   left: auto;
