--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,7 +61,8 @@
 }
 
 .app-color {
-  background-image: linear-gradient(to right, #88a0e0, #0f55bd);
+  background-image: linear-gradient(to right, #6168DB, #3b43d1, );
+
   color: white;
 }
 
